k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: selfservice-portal
  namespace: selfservice
spec:
  ports:
  - name: external
    port: 80
    targetPort: web
  selector:
    app: selfservice-portal
